Bug 1686539 - Fixed pages/collection collection list being cut off
Added a class to page and collection panels so we can use CSS to select
every second item on smaller screen and 4th item on larger screen then
set collection list and page access dropdown to right align.
Other collection list and page access dropdowns are left align.

behatnotneeded: styling only
(cherry picked from commit d0805a4fadff2916fef5cb3e1012972a531a4eb0)

--- a/htdocs/theme/raw/sass/layout/panel/_panel-quarter.scss
+++ b/htdocs/theme/raw/sass/layout/panel/_panel-quarter.scss
@@ -190,3 +190,23 @@
         }
     }
 }
+
+// Make collection list dropdown align right on the right most panel
+.panel-quarter {
+    &:nth-child(even) .collection-list .dropdown-menu,
+    &:nth-child(even) .page-access .dropdown-menu {
+        right: 0;
+        left: auto;
+        @media (min-width: $screen-sm-min) {
+            left: 0;
+            right: auto;
+        }
+    }
+    &:nth-child(4n) .collection-list .dropdown-menu,
+    &:nth-child(4n) .page-access .dropdown-menu {
+        @media (min-width: $screen-sm-min) {
+            right: 0;
+            left: auto;
+        }
+    }
+}
